--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FindRes</string>
+    <string name="no_internet_connection_title">No Internet Connection</string>
+    <string name="no_internet_connection_alert_message">It looks like you don\'t have an internet connection. Please check your connection and try again.</string>
+    <string name="no_internet_connection_alert_button_text">Try again</string>
 </resources>
